# ComfyUI-kaola-Qwen-TTS

./: .gitignore  LICENSE  README.md  ROLEPLAY_SCHEME.md  __init__.py  nodes.py  pyproject.toml  qwen3_tts_design_then_clone.json  qwen3_tts_example_workflow.json  requirements.txt
examples/: debug_full_test.py  debug_overlap_test.py  qwen3_tts_design_then_clone.json  qwen3_tts_full_studio.json  qwen3_tts_voice_injection.json  s2.srt  stage.srt
