[project]
name = "comfyui-kaola-qwen-tts"
description = "ComfyUI custom nodes for Alibaba Qwen3-TTS (Text-to-Speech) with Voice Clone, Design, and Custom Voice inputs."
version = "1.1.0"
license = {file = "LICENSE"} 
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: Apple Metal",
]

[project.urls]
Repository = "https://github.com/kana112233/ComfyUI-kaola-Qwen-TTS"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/kana112233/ComfyUI-kaola-Qwen-TTS/blob/main/README.md"
"Bug Tracker" = "https://github.com/kana112233/ComfyUI-kaola-Qwen-TTS/issues"

[tool.comfy]
PublisherId = "kaola"
DisplayName = "ComfyUI-Kaola-Qwen-TTS"
Icon = ""